HOTFIX: changed style of .footer-docs to prevent buttons clipping to the left of the screen on mobile

--- a/style.css
+++ b/style.css
@@ -754,8 +754,8 @@ hr {
     display: flex;
     overflow-x: auto;
     align-items: center;
-    justify-content: center;
     width: 100%;
+    justify-content: safe center;
 }
 
 .footer-docs-button {
